--- a/styles/payroll.css
+++ b/styles/payroll.css
@@ -6,6 +6,7 @@ fixes navbar blocking contents of top page
 body{
     padding-top: 100px;
     font-family: 'Montserat', sans-serif;
+    /* font-family: 'Times New Roman', Times, serif'; */
 }
 
 #entire_container{
@@ -14,6 +15,7 @@ body{
   justify-content: space-between;
   height: 100vh;
   width: 100vw;
+  margin-top: -20px;
 }
 
 #payroll_navbar{
@@ -49,7 +51,7 @@ body{
 
 .slide_image{
 	height: 400px;
-  width: 850px;
+  width: 950px;
   display:block;
 	margin-left:auto;
 	margin-right:auto;
@@ -116,16 +118,25 @@ body{
   background-color: #83A0DE;
 }
 
+.section_header{
+  text-decoration: underline;
+}
 #event_header{
   align-self: center;
 }
 
+#time_date{
+  align-self: center;
+  font-weight: bold;
+  font-size: 25px;
+}
+
 #about_us_container{
-  min-height: 1500px;
+  min-height: 2000px;
   display:flex;
   flex-direction: column;
   justify-content: space-around;
-  background-color: #898989;
+  /* background-color: #898989; */
 
 }
 
@@ -140,6 +151,17 @@ body{
   flex-direction: column;
   align-self: center;
   min-height: 500px;
+  margin-top: -50px;
+}
+
+#about_us_part1_blockquote{
+  padding:5px;
+}
+
+.section_image{
+  width: 200px;
+  height:100px;
+  align-self: center;
 }
 
 #about_us_1{
@@ -164,6 +186,30 @@ body{
   align-self: center;
 }
 
+
+.footer{
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    z-index: 100;
+    background-color: #B7BFF2;
+}
+
+#sponsor_logos{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width:50%;  
+  align-self: center;
+}
+
+.sponsor_images{
+  width: 80px;
+  height: 60px;
+}
 
 
 
