--- a/styles/payroll.css
+++ b/styles/payroll.css
@@ -4,7 +4,7 @@ fixes navbar blocking contents of top page
 */
 
 body{
-    padding-top: 100px;
+    padding-top: 65px;
     font-family: 'Montserat', sans-serif;
     /* font-family: 'Times New Roman', Times, serif'; */
 }
@@ -33,6 +33,7 @@ body{
 
 #banner_logo{
   width: 80%;
+  cursor: pointer;
 }
 
 #welcome_container{
@@ -115,8 +116,6 @@ body{
   cursor: pointer;
 }
 
-
-
 #join_link{
   padding: 5px;
 }
@@ -125,7 +124,7 @@ body{
   min-height: 1500px;
   display:flex;
   flex-direction: column;
-  background-color: #83A0DE;
+  background-color: #C7D7FC;
 }
 
 .section_header{
@@ -146,7 +145,7 @@ body{
 
 /*about us section */ 
 #about_us_container{
-  min-height: 3000px;
+  min-height: 3500px;
   display:flex;
   flex-direction: column;
   justify-content: space-around;
@@ -207,7 +206,7 @@ body{
     flex-direction: column;
     z-index: 100;
     background-color: lightgray;
-    visibility: hidden;
+    visibility: visible;
 }
 
 #sponsor_logos{
@@ -220,7 +219,7 @@ body{
 
 .sponsor_images{
   width: 80px;
-  height: 55px;
+  height: 45px;
 }
 
 #officers_container{
@@ -259,7 +258,7 @@ body{
 }
 
 #membership_container{
-  min-height: 1100px;
+  min-height: 1200px;
   background-color: lightgray;
 }
 
@@ -306,7 +305,7 @@ ul{
 
 #resources_container{
   min-height: 1000px;
-  background-color: lightsteelblue;
+  background-color: #DEE0DE;
 }
 
 #study_group_resources{
@@ -445,216 +444,3 @@ ul{
   align-self: center;
 }
 
-/* #hear_from_form{
-  width: 80%;
-} */
-
-/* #body_div{
-  width:100%;
-}
-
-#banner_logo{
-  display:block;
-  width: 150px;
-}
-
-.nav-item{
-  margin-left: 60px;
-}
-
-.navbar-light .navbar-nav .nav-link{
-  color: black;
-  font-size: 18px;
-}
-
-.navbar-light .navbar-nav .nav-link:hover{
-  color: blue;
-}
-
-.main-text {
-  position: absolute;
-  top: 50px;
-  width: 96.66666666666666%;
-  color: white;
-}
-
-.section_title{
-  font-style: italic;
-}
-
-/*
-#Home{
-    background-repeat: no-repeat;
-    background-image: url("https://wwwassets.rand.org/content/rand/about/locations/san-francisco/office/_jcr_content/par/herotitle.aspectfit.0x0.jpg/x1495302287458.jpg.pagespeed.ic.-3A48iDzR2.jpg"); 
-    background-color: #E6E6FA;
-}
-
-
-
-
-
-.slide_image{
-	height: 430px;
-  width: 100%;
-  display:block;
-	margin-left:auto;
-	margin-right:auto;
-}
-
-#home_caption{
-
-  margin: auto;
-  margin-top: 25px;
-  width: 600px;
-  color: blue;
-  display:flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-#awards{
-  display:flex;
-  margin-top: 10px;
-  justify-content: space-around;
-}
-
-.award_image{
-  margin-left: 20px;
-}
-
-#join_div{
-  margin-top: 10px;
-  display:flex;
-  flex-direction: column;
-}
-
-#join_link:link{
-    color:white;
-}
-
-#join_link:visited{
-    color:white;
-}
-
-#join_button{
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    cursor: pointer;
-    width: 150px;
-    background-color: #0E86FF;
-}
-
-#events_div{
-  margin-top: 10px;
-  padding: 1%;
-}
-
-#about_us{
- display:flex;
- flex-direction: column;
-}
-
-#about_us_caption{
- 
-}
-
-
-#about_us_title{
-  font-style: italic;
-}
-  
-#about_image{
-  width:50%;
-  height:550px;
-}
-
-
-#SFBAC_caption{
-  width:80%; 
-  margin-top: 10px;
-  word-wrap:break-word;
-
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-
-  text-align: justify;
-
-  padding: 1%;
-  margin: auto;
-}
-
-.more_info{
-  font-style: italic;
-}
-
-#three_section_container{
-  display:flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-content: center;
-}
-
-.about_section{
-  padding: 2%;
-}
-.section_content{
-  flex:1;
-  display:flex;
-  flex-direction: column;
-  align-content: center;   
-}
-
-.section_caption{
-  width: 80%;
-  text-align: justify;
-  margin: auto;
-  word-wrap:break-word;
-}
-
-#APA_caption{
-  width: 80%;
-  margin: auto;
-  text-align: justify;
-
-}
-
-
-static footer for logos
-
-
-.footer{
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   height: 80px;
-   text-align: center;
-   background-color: #86B2E6;
-   visibility: hidden;
-  
-}
-
-#sponsor_logos{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-
-}
-
-.logo{
-  width: 100%;
-}
-
-#america_works{
-  height: 70px;
-  width: 80px;
-}
-
-*/
-
-/* .page_part{
-    border: solid black 1px;
-} */ 
