--- a/styles/payroll.css
+++ b/styles/payroll.css
@@ -35,7 +35,7 @@ body{
 #welcome_container{
   display:flex;
   flex-direction: column;
-  min-height: 1000px;
+  min-height: 1100px;
   /* background-image: url("../photos/golden_gate_bridge.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -98,6 +98,11 @@ body{
   height: 100%;
 }
 
+#sponsors{
+  display:flex;
+  flex-direction: column;
+}
+
 #join{
   margin-top: 50px;
   display:flex;
@@ -120,7 +125,20 @@ body{
   min-height: 1500px;
   display:flex;
   flex-direction: column;
-  background-color: #C7D7FC;
+  background-color: #D4D4D4;
+}
+
+#events{
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: space-evenly;
+  /* border: solid 1px black; */
+}
+
+.event_info{
+  display:flex;
+  flex-direction: column;
 }
 
 .section_header{
