--- a/styles/payroll.css
+++ b/styles/payroll.css
@@ -403,7 +403,6 @@ ul{
   flex-direction: column;
   justify-content: center;
   text-align: center;
-
 }
 
 .learning_resources{
@@ -590,6 +589,7 @@ ul{
   #mobile_banner{
     display: flex;
     flex-direction: row;
+    justify-content: flex-end;
   }
 
   #banner_logo_mobile{
@@ -597,16 +597,14 @@ ul{
     align-self: flex-end;
   }
 
-
-
   #sidebar{
     display: inline;
     visibility: visible;
-    height: 100vh;
+    height: 100%;
     width: 0vw;
     position: fixed;
     z-index: 200;
-    background-color: #D8D8D8;
+    background-color: #F7F7F7;
     transition: 0.5s;
     padding-top: 60px;
     overflow-x: hidden;
@@ -618,13 +616,11 @@ ul{
     flex-direction: row;
     justify-content: flex-end;
     font-size: 20px;
-    color: white;
+    color: grey;
   }
 
   #close_icon{
-  
     display: none;
-    
     padding: 5px;
     cursor: pointer;
   }
@@ -640,24 +636,15 @@ ul{
     color: blue;
   }
 
- 
-
   #page_header{
     position: relative;
     font-style: italic;
-    min-height: 200px;
+    min-height: 100px;
   }
  
   #golden_gate_background{
     height: 300px;
   }
-
- 
-
-  /* h3{
-    font-size: 1.3rem;
-
-  } */
 
   #awards{
     margin: auto;
@@ -672,6 +659,10 @@ ul{
 
   .award_image{
     width: 60px;
+  }
+
+  #events_container{
+    min-height: 1000px;
   }
 
   #events_image{
@@ -689,21 +680,37 @@ ul{
   }
 
   #about_us_part1_blockquote{
-    width: 450px;
+    width: 400px;
     margin: auto;
   }
 
+  .blockquote_caption{
+    width: 400px;
+  }
 
-  #membership_conatiner{
-    min-height: 3000px;
+  #membership_container{
+    min-height: 1300px;
+  }
+
+  #membership_photo{
+    width: 350px;
+    height: 300px;
+  }
+
+  #platinum{
+    margin-left: 50px;
   }
 
   #resources_container{
-    min-height: 1400px;
+    min-height: 1350px;
   }
 
   #careers_container{
-    min-height: 2200px;
+    min-height: 1800px;
+  }
+
+  #career_header{
+    margin-top: 20px;
   }
   
 
