--- a/styles/payroll.css
+++ b/styles/payroll.css
@@ -1,11 +1,40 @@
-
-/*
-fixes navbar blocking contents of top page
-*/
-
 body{
-    padding-top: 100px;
+    padding-top: 65px;
     font-family: 'Montserat', sans-serif;
+    max-width: 100%;
+    overflow-x: hidden;
+    /* font-family: 'Times New Roman', Times, serif'; */
+}
+
+.align_center{
+  align-self: center;
+}
+
+.flex_column{
+  display:flex;
+  flex-direction: column;
+}
+
+blockquote{
+  overflow: auto;
+}
+
+.underline{
+  text-decoration: underline;
+}
+
+.bold{
+  font-weight: bold;
+}
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+#header_text{
+  color: white;
 }
 
 #entire_container{
@@ -14,10 +43,27 @@ body{
   justify-content: space-between;
   height: 100vh;
   width: 100vw;
+  margin-top: -20px;
 }
 
 #payroll_navbar{
   height: 80px;
+  /* visibility: hidden; */
+}
+
+#mobile_navbar{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+  visibility: hidden;
+}
+
+#sidebar{
+  display:none;
+}
+
+#close_navbar{
+  display: none;
 }
 
 .navbar-light .navbar-nav .nav-link{
@@ -29,11 +75,27 @@ body{
   color: blue;
 }
 
+#banner_logo{
+  width: 80%;
+  cursor: pointer;
+}
+
 #welcome_container{
   display:flex;
   flex-direction: column;
-  min-height: 850px;
-  background-color: #E2DDDC;
+  min-height: 1500px;
+  background-color: #D8D8D8;
+  /* color: white; */
+  /* background-image: url("../photos/golden_gate_bridge.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: cover; */
+  /* background-color: #E2DDDC; */
+}
+
+#golden_gate_background{
+  width: 100vw;
+  height: 500px;
 }
 
 #page_header{
@@ -43,13 +105,13 @@ body{
 }
 
 #myCarousel{
-  margin-top: 10px;
+  /* margin-top: 10px; */
   padding: 10px;
 }
 
 .slide_image{
-	height: 400px;
-  width: 850px;
+	height: 460px;
+  width: 950px;
   display:block;
 	margin-left:auto;
 	margin-right:auto;
@@ -60,7 +122,6 @@ body{
   display:flex;
   flex-direction: column;
   justify-content: space-around;
-
 }
 
 #welcome_text_div{
@@ -92,16 +153,18 @@ body{
   height: 100%;
 }
 
+#sponsors{
+  display:flex;
+  flex-direction: column;
+}
+
 #join{
   margin-top: 50px;
   display:flex;
   flex-direction: column;
-  align-self: center;
+  align-self: center;  
 
-  
 }
-
-
 
 #join_button{
   width: 200px;
@@ -109,35 +172,78 @@ body{
   cursor: pointer;
 }
 
-#events_container{
-  min-height: 500px;
-  display:flex;
-  flex-direction: column;
-  background-color: #83A0DE;
+#join_link{
+  padding: 5px;
 }
 
+#events_container{
+  min-height: 1200px;
+  display:flex;
+  flex-direction: column;
+  /* background-color: #D8D8D8; */
+}
+
+#events{
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  justify-content: space-evenly;
+  /* border: solid 1px black; */
+}
+
+.event_info{
+  display:flex;
+  flex-direction: column;
+}
+
+#events_image{
+  width: 700px;
+  height: 380px;
+}
+
+.section_header{
+  text-decoration: underline;
+  font-style: italic;
+  text-align: center;
+}
 #event_header{
   align-self: center;
 }
 
+#time_date{
+  align-self: center;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+/*about us section */ 
 #about_us_container{
-  min-height: 800px;
+  min-height: 2800px;
   display:flex;
   flex-direction: column;
-  justify-content: space-around;
-  background-color: #898989;
-
+  /* justify-content: space-evenly; */
+  background-color: #F8F9F9;
 }
 
 #about_us_header{
   align-self: center;
-
 }
 
 #about_us_part1{
-
   display:flex;
   flex-direction: column;
+  align-self: center;
+  min-height: 500px;
+  margin-top: -100px;
+}
+
+#about_us_part1_blockquote{
+  padding:5px;
+}
+
+.section_image{
+  width: 200px;
+  height:100px;
   align-self: center;
 }
 
@@ -145,223 +251,856 @@ body{
   display:flex;
   align-self: center;
   width: 700px;
-  height: 400px;
+  height: 380px;
 }
 
-#blockquote_caption{
+.blockquote_caption{
   width: 800px;
 }
 
-
-
-
-
-/* #body_div{
-  width:100%;
-}
-
-#banner_logo{
-  display:block;
-  width: 150px;
-}
-
-.nav-item{
-  margin-left: 60px;
-}
-
-.navbar-light .navbar-nav .nav-link{
-  color: black;
-  font-size: 18px;
-}
-
-.navbar-light .navbar-nav .nav-link:hover{
+.toggle_info{
+  cursor: pointer;
   color: blue;
-}
-
-.main-text {
-  position: absolute;
-  top: 50px;
-  width: 96.66666666666666%;
-  color: white;
-}
-
-.section_title{
-  font-style: italic;
-}
-
-/*
-#Home{
-    background-repeat: no-repeat;
-    background-image: url("https://wwwassets.rand.org/content/rand/about/locations/san-francisco/office/_jcr_content/par/herotitle.aspectfit.0x0.jpg/x1495302287458.jpg.pagespeed.ic.-3A48iDzR2.jpg"); 
-    background-color: #E6E6FA;
-}
-
-
-
-
-
-.slide_image{
-	height: 430px;
-  width: 100%;
-  display:block;
-	margin-left:auto;
-	margin-right:auto;
-}
-
-#home_caption{
-
-  margin: auto;
-  margin-top: 25px;
-  width: 600px;
-  color: blue;
-  display:flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-#awards{
-  display:flex;
-  margin-top: 10px;
-  justify-content: space-around;
-}
-
-.award_image{
-  margin-left: 20px;
-}
-
-#join_div{
-  margin-top: 10px;
-  display:flex;
-  flex-direction: column;
-}
-
-#join_link:link{
-    color:white;
-}
-
-#join_link:visited{
-    color:white;
-}
-
-#join_button{
-    display:block;
-    margin-left:auto;
-    margin-right:auto;
-    cursor: pointer;
-    width: 150px;
-    background-color: #0E86FF;
-}
-
-#events_div{
-  margin-top: 10px;
-  padding: 1%;
-}
-
-#about_us{
- display:flex;
- flex-direction: column;
-}
-
-#about_us_caption{
- 
-}
-
-
-#about_us_title{
-  font-style: italic;
-}
-  
-#about_image{
-  width:50%;
-  height:550px;
-}
-
-
-#SFBAC_caption{
-  width:80%; 
-  margin-top: 10px;
-  word-wrap:break-word;
-
-  display:flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-
-  text-align: justify;
-
-  padding: 1%;
-  margin: auto;
-}
-
-.more_info{
-  font-style: italic;
-}
-
-#three_section_container{
-  display:flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-content: center;
 }
 
 .about_section{
-  padding: 2%;
-}
-.section_content{
-  flex:1;
   display:flex;
   flex-direction: column;
-  align-content: center;   
+  align-self: center;
 }
-
-.section_caption{
-  width: 80%;
-  text-align: justify;
-  margin: auto;
-  word-wrap:break-word;
-}
-
-#APA_caption{
-  width: 80%;
-  margin: auto;
-  text-align: justify;
-
-}
-
-
-static footer for logos
 
 
 .footer{
-   position: fixed;
-   left: 0;
-   bottom: 0;
-   width: 100%;
-   height: 80px;
-   text-align: center;
-   background-color: #86B2E6;
-   visibility: hidden;
-  
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    display:flex;
+    flex-direction: column;
+    z-index: 100;
+    background-color: lightgray;
+    visibility: visible;
 }
 
 #sponsor_logos{
   display: flex;
   flex-direction: row;
-  justify-content: center;
-
+  justify-content: space-around;
+  width:50%;  
+  align-self: center;
 }
 
-.logo{
-  width: 100%;
-}
-
-#america_works{
-  height: 70px;
+.sponsor_images{
   width: 80px;
+  height: 45px;
 }
 
-*/
+#officers_container{
+  min-height: 1000px;
+  width: 100%;
 
-/* .page_part{
-    border: solid black 1px;
-} */ 
+}
+
+#officers_content{
+  margin: auto;
+  min-height: 900px;
+  width: 90%;
+
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.officer_info{
+  align-self: center;
+  border: ridge 1px black;
+  padding: 5px;
+  font-weight: bold;
+  width: 400px;
+  height: 300px;
+}
+
+.officer_image{
+  width: 100px;
+  height: 100px;
+  align-self: center;
+}
+
+#president{
+  margin: auto;
+}
+
+#membership_container{
+  min-height: 1300px;
+  /* background-color: lightgray; */
+}
+
+#membership_fees{
+  margin-top: 50px;
+  display:flex;
+  flex-direction: column;
+}
+
+#benefits{
+  margin: auto;
+  width: 40%;
+}
+
+.corporate_type{
+  display:flex;
+  flex-direction: row;
+  align-self: center;
+}
+
+#silver{
+  width:30px;
+  height:30px;
+  background-color: silver;
+}
+
+#gold{
+  width:30px;
+  height:30px;
+  background-color: gold;
+}
+
+#platinum{
+  width:30px;
+  height:30px;
+  background-color: #E5E4E2;
+  margin-left: 80px;
+}
+
+ul{
+  font-size: 20px;
+  font-style: italic;
+}
+
+#resources_container{
+  min-height: 1000px; 
+  background-color: #D8D8D8;
+}
+
+#study_group_resources{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#cpp_image{
+  width:80px;
+  height:80px;
+  align-self: center;
+}
+
+#fpc_image{
+  width:80px;
+  height:80px;
+  align-self: center;
+}
+
+#cpp{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+#fpc{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+
+.learning_resources{
+  display:flex;
+  flex-direction: column;
+  font-style: italic;
+  text-align: center;
+}
+
+#learning_resources_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+#careers_container{
+  min-height: 1600px;
+  /* background-color: lightgrey; */
+}
+
+#open_positions{
+  display: flex;
+  flex-direction: column;
+  align-self: center;
+  text-align: center;
+
+}
+
+#help_sites{
+  display:flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.underline_header{
+  text-decoration: underline;
+}
+
+#accountants_international{
+  width: 40%;
+  margin: auto;
+}
+
+#job_form{
+  display:flex;
+  flex-direction: column;
+  align-self: center;
+}
+
+#job_form_input{
+  width: 40%;
+  align-self: center;
+  margin: auto;
+  padding: 5px;
+}
+
+#submit_container{
+  display: flex;
+  flex-direction: column;
+}
+
+#submit_button{
+  width: 200px;
+  border-radius: 0px;
+  cursor: pointer;
+  align-self: center;
+}
+
+#contact_us_container{
+  min-height: 1000px;
+  display :flex;
+  flex-direction: column;
+  background-color: #D8D8D8;
+
+}
+
+#contact_info{
+  align-self: center;
+  font-weight: bold;
+
+}
+
+.follow_us_container{
+  display:flex;
+  flex-direction: row;
+  
+}
+
+.follow_image{
+  width: 50px;
+  height: 50px;
+  margin-top: -10px;
+}
+
+#facebook_logo{
+  width: 40px;
+  height: 40px;
+
+}
+
+#hear_from_container{
+  display: flex;
+  flex-direction: column;
+  width: 60%;
+  align-self: center;
+}
+
+#membership_photo{
+  width: 550px;
+  height: 300px;
+  align-self: center;
+}
+
+#career_header{
+  display:flex;
+  flex-direction: column; 
+}
+
+#career_image{
+  width: 500px;
+  height: 300px;
+  align-self: center;
+}
+
+#ending{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #252525;
+  width: 100vw;
+  min-height: 200px;
+}
+
+#ending_content{
+  align-self: center;
+  color: white;
+}
+
+
+/* mobile version */ 
+@media screen and (min-width: 500px) and (max-width: 520px){
+
+  body{
+    overflow-x: hidden;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  h2{
+    font-size: 1.2rem;
+  }
+
+  h3{
+    font-size: 1.1rem;
+  }
+
+  li{
+    font-size: 0.9rem;
+  }
+
+  entire_container{
+    margin: 0 auto;
+  }
+
+  #payroll_navbar{
+    visibility: hidden;
+  }
+  
+  #mobile_navbar{
+    display:flex;
+    justify-content: space-between;
+    visibility: visible;
+    width:100vw;
+  }
+
+  #mobile_bar{
+    align-self: center;
+    cursor: pointer;
+  }
+
+  #mobile_banner{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  #banner_logo_mobile{
+    width: 60%;
+    align-self: flex-end;
+  }
+
+  #sidebar{
+    display: inline;
+    visibility: visible;
+    height: 100%;
+    width: 0vw;
+    position: fixed;
+    z-index: 200;
+    background-color: #F7F7F7;
+    transition: 0.5s;
+    padding-top: 60px;
+    overflow-x: hidden;
+    left:0;
+  }
+
+  #close_navbar{
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    font-size: 20px;
+    color: grey;
+  }
+
+  #close_icon{
+    display: none;
+    padding: 5px;
+    cursor: pointer;
+  }
+
+  #mobile_nav_links{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  #mobile_nav_links p:hover{
+    cursor: pointer;
+    color: blue;
+  }
+
+  #page_header{
+    position: relative;
+    font-style: italic;
+    min-height: 100px;
+  }
+ 
+  #golden_gate_background{
+    height: 300px;
+  }
+
+  #awards{
+    margin: auto;
+    min-width: 100px;
+  }
+  
+  .slide_image{
+    height: 300px;
+    width: 450px;
+
+  }
+
+  .award_image{
+    width: 60px;
+  }
+
+  #events_container{
+    min-height: 1000px;
+  }
+
+  #events_image{
+    width: 350px;
+    height: 200px;
+  }
+
+  #about_us_container{
+    min-height: 5000px;
+  }
+
+  #about_us_1{
+    height: 180px;
+    width: 300px;
+  }
+
+  #about_us_part1_blockquote{
+    width: 400px;
+    margin: auto;
+  }
+
+  .blockquote_caption{
+    width: 400px;
+  }
+
+  #membership_container{
+    min-height: 1300px;
+  }
+
+  #membership_photo{
+    width: 350px;
+    height: 300px;
+  }
+
+  #platinum{
+    margin-left: 50px;
+  }
+
+  #resources_container{
+    min-height: 1350px;
+  }
+
+  #careers_container{
+    min-height: 1800px;
+  }
+
+  #career_header{
+    margin-top: 20px;
+  }
+  
+
+}
+
+@media screen and (min-width: 400px) and (max-width: 500px){
+  body{
+    overflow-x: hidden;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  h2{
+    font-size: 1.2rem;
+  }
+
+  h3{
+    font-size: 1.1rem;
+  }
+
+  li{
+    font-size: 0.9rem;
+  }
+
+  entire_container{
+    margin: 0 auto;
+  }
+
+  #payroll_navbar{
+    visibility: hidden;
+  }
+  
+  #mobile_navbar{
+    display:flex;
+    justify-content: space-between;
+    visibility: visible;
+    width:100vw;
+  }
+
+  #mobile_bar{
+    align-self: center;
+    cursor: pointer;
+  }
+
+  #mobile_banner{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  #banner_logo_mobile{
+    width: 60%;
+    align-self: flex-end;
+  }
+
+  #sidebar{
+    display: inline;
+    visibility: visible;
+    height: 100%;
+    width: 0vw;
+    position: fixed;
+    z-index: 200;
+    background-color: #F7F7F7;
+    transition: 0.5s;
+    padding-top: 60px;
+    overflow-x: hidden;
+    left:0;
+  }
+
+  #close_navbar{
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    font-size: 20px;
+    color: grey;
+  }
+
+  #close_icon{
+    display: none;
+    padding: 5px;
+    cursor: pointer;
+  }
+
+  #mobile_nav_links{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  #mobile_nav_links p:hover{
+    cursor: pointer;
+    color: blue;
+  }
+
+  #page_header{
+    position: relative;
+    font-style: italic;
+    min-height: 100px;
+    margin: 0;
+  }
+
+  #welcome_container{
+    min-height: 1050px;
+  }
+ 
+  #golden_gate_background{
+    height: 300px;
+  }
+
+  #awards{
+    margin: auto;
+    min-width: 100px;
+  }
+  
+  .slide_image{
+    height: 300px;
+    width: 450px;
+
+  }
+
+  .award_image{
+    width: 60px;
+  }
+
+  #events_container{
+    min-height: 900px;
+  }
+
+  #events_image{
+    width: 350px;
+    height: 200px;
+  }
+
+  #about_us_container{
+    min-height: 5500px;
+  }
+
+  #about_us_1{
+    height: 180px;
+    width: 300px;
+  }
+
+  #about_us_part1_blockquote{
+    width: 400px;
+    margin: auto;
+  }
+
+  .blockquote_caption{
+    width: 400px;
+  }
+
+  #membership_container{
+    min-height: 1300px;
+  }
+
+  #membership_photo{
+    width: 350px;
+    height: 300px;
+  }
+
+  #platinum{
+    margin-left: 50px;
+  }
+
+  #resources_container{
+    min-height: 1400px;
+  }
+
+  #careers_container{
+    min-height: 1800px;
+  }
+
+  #career_image{
+    width: 400px;
+  }
+
+  #career_header{
+    margin-top: 20px;
+  }
+  
+
+}
+
+
+/* small screens*/
+@media screen and (max-width: 400px){
+  body{
+    overflow-x: hidden;
+  }
+
+  h1 {
+    font-size: 1.5rem;
+  }
+
+  h2{
+    font-size: 1.2rem;
+  }
+
+  h3{
+    font-size: 1.1rem;
+  }
+
+  li{
+    font-size: 0.9rem;
+  }
+
+  entire_container{
+    margin: 0 auto;
+  }
+
+  #payroll_navbar{
+    visibility: hidden;
+  }
+  
+  #mobile_navbar{
+    display:flex;
+    justify-content: space-between;
+    visibility: visible;
+    width:100vw;
+  }
+
+  #mobile_bar{
+    align-self: center;
+    cursor: pointer;
+  }
+
+  #mobile_banner{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  #banner_logo_mobile{
+    width: 60%;
+    align-self: flex-end;
+  }
+
+  #sidebar{
+    display: inline;
+    visibility: visible;
+    height: 100%;
+    width: 0vw;
+    position: fixed;
+    z-index: 200;
+    background-color: #F7F7F7;
+    transition: 0.5s;
+    padding-top: 60px;
+    overflow-x: hidden;
+    left:0;
+  }
+
+  #close_navbar{
+    display:flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    font-size: 20px;
+    color: grey;
+  }
+
+  #close_icon{
+    display: none;
+    padding: 5px;
+    cursor: pointer;
+  }
+
+  #mobile_nav_links{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+
+  #mobile_nav_links p:hover{
+    cursor: pointer;
+    color: blue;
+  }
+
+  #page_header{
+    position: relative;
+    font-style: italic;
+    min-height: 100px;
+    margin: 0;
+  }
+
+  #welcome_container{
+    min-height: 1030px;
+  }
+ 
+  #golden_gate_background{
+    height: 300px;
+  }
+
+  #awards{
+    margin: auto;
+    width: 300px;
+  }
+  
+  .slide_image{
+    height: 250px;
+    width: 300px;
+
+  }
+
+  .award_image{
+    width: 50px;
+  }
+
+  #events_container{
+    min-height: 1000px;
+  }
+
+  #events_image{
+    width: 350px;
+    height: 200px;
+  }
+
+  #about_us_container{
+    min-height: 5000px;
+  }
+
+  #about_us_1{
+    margin-top: 20px; 
+    height: 150px;
+    width: 250px;
+  }
+
+  .officer_info{
+    width: 290px;
+    height:310px;
+  }
+
+  #about_us_part1_blockquote{
+    width: 300px;
+    margin: auto;
+  }
+
+  .blockquote_caption{
+    width: 300px;
+  }
+
+  #membership_container{
+    min-height: 1550px;
+  }
+
+  #membership_photo{
+    width: 350px;
+    height: 300px;
+  }
+
+  #platinum{
+    margin-left: 50px;
+  }
+
+  #resources_container{
+    min-height: 1850px;
+  }
+
+  #help_sites{
+    flex-wrap: wrap;
+  }
+
+  #learning_resources_container{
+    flex-wrap: wrap;
+  }
+
+  #careers_container{
+    min-height: 2100px;
+  }
+
+  #career_header{
+    margin-top: 20px;
+  }
+
+  #career_image{
+    width: 300px;
+    height:200px;
+  }
+
+  #accountants_international{
+    width: 300px;
+  }
+
+}
+/* end of mobile version */ 
