--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,8 @@
 body {
-  margin-top: 200px;
-  width: 100vw;
-  padding: 0;
+  padding-top: 65px;
+  max-width: 100%;
+  overflow-x: hidden;
+  
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
