--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -6,6 +6,7 @@
 
 #navBar{
     background-color: #f7f7f7;
+    height: 100px;
 }
 
 
@@ -15,6 +16,10 @@
 ul li{
     align-self: center;
     width: 150px;
+}
+
+ul li a{
+    color: black;
 }
 
 #imageLogo{
