--- a/frontend/src/components/AboutUs/Members/President/President.css
+++ b/frontend/src/components/AboutUs/Members/President/President.css
@@ -8,3 +8,10 @@
     width: 300px;
     display:flex;
 }
+
+
+@media screen and (max-width: 600px){
+    .memberCard{
+        align-self: center;
+    }
+}
