--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -4,7 +4,7 @@
     justify-content: center;
     background-color: #252525;
     width: 100vw;
-    min-height: 200px;
+    height: 150px;
 }
 
 #ending_content{
