--- a/frontend/src/components/Awards/Awards.css
+++ b/frontend/src/components/Awards/Awards.css
@@ -3,11 +3,20 @@
     display:flex;
     flex-direction: row;  
     align-self:center;
-    justify-content: space-around;
+    justify-content: space-around;    
 }
 
 .award_image{
     padding: 5px;
-    width:110px;
-    height: 100%;
-  }
+    width:100px;
+    height: 100px;
+}
+
+@media screen and (max-width: 600px){
+    .award_image{
+        width: 50px;
+        height:50px;
+    }
+}
+
+
