--- a/frontend/src/components/Carousel/Carousel.css
+++ b/frontend/src/components/Carousel/Carousel.css
@@ -5,3 +5,10 @@
 	margin-left:auto;
 	margin-right:auto;
 }
+
+@media screen and (max-width: 600px){
+	.slide_image{
+		height: 250px;
+		width: 300px;
+	}
+}
