--- a/frontend/src/components/Events/Events.css
+++ b/frontend/src/components/Events/Events.css
@@ -17,7 +17,7 @@
 }
 
 #events_image{
-    width: 900px;
+    width: 850px;
     height: 380px;
 }
 
@@ -29,4 +29,15 @@
     display:flex;
     flex-direction: column; 
     justify-content: space-between;
+}
+
+@media screen and (max-width: 600px){
+    #events_image{
+        display:none;
+    }
+
+    #event_header{
+        align-self: center;
+    }
+
 }
