--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -44,21 +44,20 @@
 }
 
 
-@media screen and (max-width: 520px){
+@media screen and (max-width: 600px){
+
+    h1 {
+        font-size: 1.5rem;
+    }
 
     #golden_gate_background{
-        height: 300px;
+        height: 280px;
+        width: 80vw;
     }
 
     #page_header{
         position: relative;
         font-style: italic;
-        min-height: 100px;
     }
-
-
-
-
-
 }
 
