--- a/frontend/src/components/Sponsors/Sponsors.css
+++ b/frontend/src/components/Sponsors/Sponsors.css
@@ -13,6 +13,14 @@
 }
 
 .sponsor_images{
-    width: 110px;
+    width: 100px;
     height: 100px;
+}
+
+
+@media screen and (max-width: 600px){
+    .sponsor_images{
+        width: 50px;
+        height:50px;
+    }
 }
