working version of refactoring

--- a/frontend/src/components/AboutUs/AboutSections/AboutSections.css
+++ b/frontend/src/components/AboutUs/AboutSections/AboutSections.css
@@ -11,4 +11,11 @@
 }
 
 
+@media screen and (max-width: 600px){
+    .card-group{
+        display:flex;
+        flex-direction: column;
+    }
+}
+
 
