--- a/frontend/src/components/ContactUs/ContactUs.css
+++ b/frontend/src/components/ContactUs/ContactUs.css
@@ -15,3 +15,12 @@
     align-self: center;
     font-weight: bold;
 }
+
+
+@media screen and (max-width: 600px){
+
+    #contact_us_container{
+        margin-top: 5px;
+    }
+
+}
