--- a/frontend/src/components/Events/Events.css
+++ b/frontend/src/components/Events/Events.css
@@ -2,8 +2,8 @@
     display:flex;
     flex-direction: column;
     align-content: center;
-    margin-top: 30px;
     background-color: #D8D8D8;
+    margin-top: 30px;
 }
 
 .align_center{
@@ -32,6 +32,11 @@
 }
 
 @media screen and (max-width: 600px){
+
+    #event_container{
+        margin-top:5px;
+    }
+
     #events_image{
         display:none;
     }
