--- a/frontend/src/components/Membership/Membership.css
+++ b/frontend/src/components/Membership/Membership.css
@@ -25,6 +25,12 @@
 }
 
 @media screen and (max-width: 600px){
+
+    #membership_container{
+        margin-top:5px;
+    }
+
+
     #membership_photo{
         display:none;
     }
