--- a/frontend/src/components/NavElement/NavElement.css
+++ b/frontend/src/components/NavElement/NavElement.css
@@ -2,3 +2,12 @@ li{
     width: 100%;
     font-style: italic;
 }
+
+@media screen and (max-width: 600px){
+
+    li{
+        list-style-type: none;
+    }
+
+
+}
