--- a/frontend/src/components/Resources/LearningResources/LearningResources.css
+++ b/frontend/src/components/Resources/LearningResources/LearningResources.css
@@ -1,3 +1,8 @@
+
+.resourcesCard{
+    display:flex;
+}
+
 .learning_resources{
     display:flex;
     flex-direction: column;
@@ -9,6 +14,15 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+}
+
+@media screen and (max-width: 600px){
+
+    #learning_resources_container{
+        display:flex;
+        flex-direction: column;
+    }
+    
 }
 
 
