worked on membership formatting, updated footer, working on event images

--- a/frontend/src/components/Footer/Footer.css
+++ b/frontend/src/components/Footer/Footer.css
@@ -13,5 +13,12 @@
 }
 
 #apa_link{
-  text-decoration: white
+  color: inherit;
+  text-decoration: none;
+}
+
+.footerLink{
+  padding: 5px;
+  color: inherit;
+  text-decoration: none;
 }
