added events carousel, fixed bouncing issue

--- a/frontend/src/components/Events/Events.css
+++ b/frontend/src/components/Events/Events.css
@@ -25,11 +25,11 @@
     align-self: center;
 }
 
-.eventPosts{
+/* .eventPosts{
     display:flex;
     flex-direction: column; 
     justify-content: space-between;
-}
+} */
 
 @media screen and (max-width: 600px){
 
