working on mobile

--- a/frontend/src/components/Awards/Awards.css
+++ b/frontend/src/components/Awards/Awards.css
@@ -36,8 +36,12 @@
 
 @media screen and (max-width: 600px){
     .award_image{
-        width: 50px;
-        height:50px;
+        width: 40px;
+        height:40px;
+    }
+    
+    #awardsGrid{
+      width: 100%;
     }
 }
 
