--- a/frontend/src/components/AboutUs/Members/OfficerMember/OfficerMember.css
+++ b/frontend/src/components/AboutUs/Members/OfficerMember/OfficerMember.css
@@ -9,3 +9,12 @@
     height: 350px;
     display:flex;
 }
+
+@media screen and (max-width: 600px){
+  .memberCard{
+    width: 300px;
+    height: 350px;
+  }
+}
+
+
