--- a/frontend/src/components/Carousel/Carousel.css
+++ b/frontend/src/components/Carousel/Carousel.css
@@ -7,8 +7,7 @@
 }
 
 @media screen and (max-width: 600px){
-	.slide_image{
-		height: 250px;
-		width: 300px;
-	}
+	#myCarousel{
+    display:none;
+  }
 }
