--- a/frontend/src/components/Awards/Awards.css
+++ b/frontend/src/components/Awards/Awards.css
@@ -12,6 +12,16 @@
     height: 100px;
 }
 
+.bannerImage{
+  width: 290px;
+  height: 100px;
+  padding: 5px;
+}
+
+#thirdPlaceBanner{
+  width: 300px;
+}
+
 #awardsCard{
   align-self: center;
 }
@@ -38,6 +48,15 @@
     .award_image{
         width: 40px;
         height:40px;
+    }
+
+    .bannerImage{
+      width: 100px;
+      height: 50px;
+    }
+    
+    #thirdPlaceBanner{
+      width: 105px;
     }
     
     #awardsGrid{
