added cpc links to home/about, added new logo, added congress links

--- a/frontend/src/components/Events/Events.css
+++ b/frontend/src/components/Events/Events.css
@@ -25,6 +25,16 @@
     align-self: center;
 }
 
+#conferenceLinks{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+.conference{
+    align-self: center;
+}
+
 /* .eventPosts{
     display:flex;
     flex-direction: column; 
