--- a/frontend/src/components/Carousel/Carousel.css
+++ b/frontend/src/components/Carousel/Carousel.css
@@ -1,9 +1,10 @@
 .slide_image{
 	height: 400px;
-  width: 700px;
+  width: 800px;
   display:block;
 	margin-left:auto;
-	margin-right:auto;
+  margin-right:auto;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 600px){
