changed to new logo for mobile view

--- a/frontend/src/components/NavBar/NavBar.css
+++ b/frontend/src/components/NavBar/NavBar.css
@@ -42,7 +42,8 @@ ul li a{
     }
     
     #banner_logo_mobile{
-        width: 60%;
+        height: 90px;
+        width: 100px;        
         float:right;
     }
 
