--- a/frontend/src/components/AboutUs/AboutUs.css
+++ b/frontend/src/components/AboutUs/AboutUs.css
@@ -26,6 +26,9 @@
 }
 
 @media screen and (max-width: 600px){
+    #about_us_header{
+        margin-top: 40px;
+    }
     #about_us_1{
         display:none;
     }
