--- a/frontend/src/components/Resources/Resources.css
+++ b/frontend/src/components/Resources/Resources.css
@@ -4,3 +4,9 @@
     flex-direction: column;
     justify-content: space-evenly;
 }
+
+@media screen and (max-width: 600px){
+    #resources_container{
+        margin-top: 40px;
+    }
+}
