setup docker compose for dev, added overflow scroll for job postings and events

--- a/frontend/src/components/Careers/OpenPositions/OpenPositions.css
+++ b/frontend/src/components/Careers/OpenPositions/OpenPositions.css
@@ -4,6 +4,8 @@
     align-self: center;
     text-align: center;
     font-style: italic;
+    height: 450px;
+    overflow: auto;
     width: 100%;
 }
 
