--- a/frontend/src/components/Careers/JobForm/JobForm.css
+++ b/frontend/src/components/Careers/JobForm/JobForm.css
@@ -1,3 +1,21 @@
+.job_container{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+#job_upload{
+    align-self: center;
+}
+
+#file_submit_button{
+    padding: 5px;
+}
+
+#job_form_option2_container{
+    align-self: center;
+}
+
 #job_form{
     display:flex;
     flex-direction: column;
