mapped inputs to modal message, modified email for proper formatting of job posting info

--- a/frontend/src/components/Careers/JobForm/JobForm.css
+++ b/frontend/src/components/Careers/JobForm/JobForm.css
@@ -28,3 +28,16 @@
     margin: auto;
     padding: 5px;
 }
+
+.job_description_container{
+    height: 100px;
+    overflow: auto;
+}
+ 
+.job-posting-footer-header{
+    padding-left: 0px;
+}
+
+#submit-job-button{
+    margin: 5px;
+}
