--- a/frontend/src/components/AdminLogin/AdminLogin.css
+++ b/frontend/src/components/AdminLogin/AdminLogin.css
@@ -7,6 +7,12 @@
     padding-top: 70px;
 }
 
+@media screen and (min-width: 1400px){
+    .loginContainer{
+        height: 600px;
+    }
+}
+
 #loginForm{
     display: flex;
     flex-direction: column;
