created token expiration component, working on api route to resend. added logic to handle active and removed postings, filtered/displayed based on bool value

--- a/frontend/src/components/EditCareers/EditCareers.css
+++ b/frontend/src/components/EditCareers/EditCareers.css
@@ -5,3 +5,15 @@
     width: 50%;
     padding: 10px;
 }
+
+.tabItem{
+    width: 30%;
+}
+
+.viewPostingsButtons{
+    margin-top: 5px;
+}
+
+.postingsButton{
+    margin-right: 5px;
+}
