added new images for npw and apa on home page, added new member to about us, reset banner image back to original, assigned new carousel start image

--- a/frontend/src/components/Awards/Awards.css
+++ b/frontend/src/components/Awards/Awards.css
@@ -26,12 +26,17 @@
   align-self: center;
 }
 
-#APALogoImage{
-  align-self: center;
+#apaImageEvent{
+  width: 95%;
 }
 
 .awardsBody{
   align-self: center;
+}
+
+#npwContainer{
+  margin: 10px;
+  padding-right: 5px;
 }
 
 @media screen and (max-width: 600px){
