--- a/frontend/src/components/Home/Home.css
+++ b/frontend/src/components/Home/Home.css
@@ -35,6 +35,12 @@
     margin-left: -30px;
 }
 
+#golden_gate_background{
+    width: 100vw;
+    height: 450px;
+    margin-left: 5px;
+}
+
 #header_text{
     color:white;
 }
