--- a/frontend/src/components/Awards/Awards.css
+++ b/frontend/src/components/Awards/Awards.css
@@ -39,6 +39,30 @@
   padding-right: 5px;
 }
 
+.eventBannerContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: -50px;
+}
+
+.eventBanner {
+  display: flex;
+  align-self: center;
+  margin-top: 10px;
+}
+
+.eventBannerImage {
+  height: 80%;
+  width: 100%;
+  align-self: center;
+}
+
+.italicUnderline {
+  font-style: italic;
+  text-decoration: underline;
+}
+
 @media screen and (max-width: 600px){
     .award_image{
         width: 40px;
